--- a/config.json
+++ b/config.json
@@ -1,8 +1,12 @@
 {
-    "localAddress":"127.0.0.1",
+    "server": "mcapp1.herokuapp.com",
+    "localAddress": "0.0.0.0",
+    "scheme": "ws",
     "localPort": 1080,
-    "serverAddress": "127.0.0.1",
+    "remote_port": 80,
+    "serverAddress": "0.0.0.0",
     "serverPort": 8388,
     "password": "shadowsocks-over-websocket",
+    "timeout": 600,
     "method": "aes-256-cfb"
 }
